2011-07-11  Jean-Louis Martineau <martineau@zmanda.com>
        Add '$s' substitution to autolabel.
	* perl/Amanda/Changer.pm (make_new_tape_label): Handle $s.
	* perl/Amanda/Taper/Scan/lexical.pm, perl/Amanda/Taper/Scan/oldest.pm,
	  perl/Amanda/Taper/Scribe.pm: Call make_new_tape_label with the slot.
	* man/xml-source/amanda.conf.5.xml: Document $s substitution.
					  
2011-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix compuation of npercents and
	  nexclamations.

2011-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* config/ltmain.sh, config/lt~obsolete.m4, config/ltoptions.m4,
	  config/ltsugar.m4, config/ltversion.m4: Upgrade libtool to 2.4

2011-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/libs.m4: Fix for newer aclocal
	* config/libtool.m4: Upgrade for compatibility with newwe aclocal

2011-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* Many *.c files: Fix for gcc-4.6.0 warning: variable ‘NAME’ set but
	  not used.

2011-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Keep the barcode when relabeling a tape

2011-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Retry up to 120 seconds if the sense
	  key is 'Not Ready'

2011-07-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add letter based sequence to autolabel
	  and meta-autolabel.
	* man/xml-source/amanda.conf.5.xml: Document them.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: s/stralloc/g_strdup/

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: typo.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Call short_dump_state on all state change.

2011-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by p_michalczyk
	* application-src/amstar.c: Place command_options at the and of
	  command line.
